--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uphysics",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Unrealistic physic engine.",
   "main": "lib/physic.js",
   "engines": {
@@ -15,7 +15,9 @@
     "math-kit": "^0.11.5"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "gamepad": "^1.4.2",
+    "terminal-kit": "^0.26.1"
   },
   "scripts": {
     "test": "tea-time -R dot -O"
