--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "array-kit": "^0.2.4",
     "logfella": "^1.3.13",
-    "math-kit": "^0.16.14"
+    "math-kit": "^0.16.15"
   },
   "devDependencies": {
+    "@electron/remote": "^2.0.5",
+    "babylonjs": "^4.2.1",
+    "babylonjs-loaders": "^4.2.1",
+    "earcut": "^2.2.3",
+    "electron": "^17.1.0",
     "gm": "^1.23.1",
     "terminal-kit": "^2.4.0"
   },
@@ -42,7 +47,7 @@
     }
   },
   "copyright": {
-    "title": "Uphysics",
+    "title": "µPhysics",
     "years": [
       2017
     ],
